@@ -1,6 +1,7 @@
 2020-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Ship own version of DataTables, resolves #144
+	* Rely only on default mail address for sending report, resolves #139
 
 2020-10-12 Francois Suter (Idéative)  <typo3@ideative.ch>
 
